--- a/index.html
+++ b/index.html
@@ -34,13 +34,11 @@
                 <img src="./assets/img/myphoto.png" alt="My photo" class="photo-img">
             </div>
 
-
-
             <div class="topnav-info">
                 <a class="topnav-title">Nguyen Minh Tung</a>
-                <div class="text-mt"><i id="topnav-icon" class="fas fa-map-marked-alt"></i> Quang Binh, Viet Nam</div>
-                <div class="text-mt" href="mailto:nguyenminhtung252@gmail.com" title="Mail to nguyenminhtung252@gmail.com"><i id="topnav-icon" class="fas fa-mail-bulk"></i> nguyenminhtung252@gmail.com</div>
-                <div class="text-mt" href="tel:0913861893" title="Make a call to 0913861893"><i id="topnav-icon" class="fas fa-phone" ></i> 0913861893</div>
+                <div class="text-in"><a class="text-mt"><i id="topnav-icon" class="fas fa-map-marked-alt"></i> Quang Binh, Viet Nam</a></div>
+                <div class="text-in"><a class="text-mt" href="mailto:nguyenminhtung252@gmail.com" title="Mail to nguyenminhtung252@gmail.com"><i id="topnav-icon" class="fas fa-mail-bulk"></i> nguyenminhtung252@gmail.com</a></div>
+                <div class="text-in"><a class="text-mt" href="tel:0913861893" title="Make a call to 0913861893"><i id="topnav-icon" class="fas fa-phone" ></i> 0913861893</a></div>
             </div>
         </div>
         
@@ -135,9 +133,15 @@
         <div id="contact">
             <h2>Contact me</h2>
             <div class="wrapper">
-                <a class="hover-fx" href="https://www.instagram.com/shodydosh/"> <i class="fab fa-instagram" ></i> </a>
-                <a class="hover-fx" href="https://www.facebook.com/shodydosh/"> <i class="fab fa-facebook"></i> </a>
-                <a class="hover-fx" href="https://github.com/Shodydosh"> <i class="fab fa-github"></i> </a>
+                <a class="hover-fx" href="https://www.instagram.com/shodydosh/" 
+                    target="_blank" title="Go to my Instagram"> <i class="fab fa-instagram" ></i> </a>
+
+                <a class="hover-fx" href="https://www.facebook.com/shodydosh/" 
+                    target="_blank" title="Go to my Facebook"> <i class="fab fa-facebook"></i> </a>
+
+                <a class="hover-fx" href="https://github.com/Shodydosh" 
+                    target="_blank" title="Go to my Github"> <i class="fab fa-github"></i> </a>
+
             </div>
             
         </div>  
