--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
             <div class="topnav-info">
                 <a class="topnav-title">Nguyen Minh Tung</a>
-                <div class="text-in"><a class="text-mt"><i id="topnav-icon" class="fas fa-map-marked-alt"></i> Quang Binh, Viet Nam</a></div>
+                <div class="text-in"><a class="location"><i id="topnav-icon" class="fas fa-map-marked-alt"></i> Quang Binh, Viet Nam</a></div>
                 <div class="text-in"><a class="text-mt" href="mailto:nguyenminhtung252@gmail.com" title="Mail to nguyenminhtung252@gmail.com"><i id="topnav-icon" class="fas fa-mail-bulk"></i> nguyenminhtung252@gmail.com</a></div>
                 <div class="text-in"><a class="text-mt" href="tel:0913861893" title="Make a call to 0913861893"><i id="topnav-icon" class="fas fa-phone" ></i> 0913861893</a></div>
             </div>
